# CodeCommit

./: .gitignore  Cargo.toml  LLMInstructions.md  Modules.md  README.md  UserSpecification.md  build.sh  codeRollup.sh
agent-state/specifications/: project-consistent  self-consistent
src/: InstitutionalizedKnowledge.md  InternalDependencies.md  ModuleDependencies.md  Modules.md  app_error.rs  build_runner.rs  cli.rs  cli_test.rs  config.rs  config_test.rs  error.rs  execution.rs  file_updater.rs  file_updater_gitignore_tests.rs  file_updater_test.rs  init.rs  init_test.rs  lib.rs  llm.rs  llm_api.rs  llm_api_test.rs  llm_caller.rs  logger.rs  logging.rs  main.rs  parsing.rs  prompts.rs  prompts_consistency.rs  prompts_inst.rs  response_parser.rs  response_parser_test.rs  rollup.rs  rollup_test.rs  state.rs
src/app_error/: APISignatures.md  app_error_test.rs  mod.rs
src/auto_workflow/: APISignatures.md  InternalDependencies.md  ModuleDependencies.md  PublicAPI.md  UserSpecification.md  complete.txt  discovery.rs  discovery_test.rs  documented.txt  enforcement_test.rs  executor.rs  executor_test.rs  file_updater.rs  file_updater_test.rs  graph.rs  graph_test.rs  happy-path-tested-no-cache.txt  happy-path-tested-with-cache.txt  implemented-no-cache.txt  implemented-with-cache.txt  mod.rs  phase1_test.rs  project_consistent.txt  prompt_builder.rs  prompt_builder_test.rs  prompts.rs  response_format_instructions.txt  secure.txt  self_consistent.txt  types.rs
src/cli/: APISignatures.md  ModuleDependencies.md  cli_test.rs  mod.rs
tests/: parsing_test.rs  state_test.rs
(+106 files in other folders)
