[package]
name = "code-commit"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
chrono = "0.4"
path-clean = "1.0"
ignore = "0.4"
tempfile = "3.10"

[dev-dependencies]